fix: master: fixing navbar and hero styles on mobile, included font-weights in Google Fonts CDN URLs

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -11,9 +11,13 @@
         transition: 0.3s
     }
 
-    nav img{ margin: 40px auto 40px auto; }
+    nav img{
+        margin: 20px auto 20px auto;
+    }
 
-    .nav-links, .nav-link{ display: none; }
+    .nav-links, .nav-link{
+        display: none;
+    }
 
     .mobile-menu{
         display: flex;
@@ -22,12 +26,19 @@
         color: white;
         background-color: var(--secondary-color);
         width: 100%;
-        padding: 25px;
+        max-height: 60px;
     }
 
-    .techpros-hamburger{ width: 100%; }
+    .techpros-hamburger{
+        width: 100%;
+        padding: 19px 20px 18px;
+    }
 
-    .techpros-hamburger h2{ margin: 0; }
+    .techpros-hamburger div{
+        margin: 0;
+        font-size: 18px;
+        font-weight: 700;
+    }
 
     #hamburger{
         display: flex;
@@ -38,37 +49,59 @@
 
     #hamburger .line{
         display: block;
-        margin: 4px;
-        height: 4px;
-        width: 30px;
+        margin: 2px;
+        height: 3px;
+        width: 22px;
         background: white;
         border-radius: 9px;
         transition: 0.3s;
     }
 
-    .hamburger-is-open .line-1{ transform: translate(0, 12px) rotate(45deg); }
+    .hamburger-is-open .line-1{ transform: translate(0, 10px) rotate(45deg); }
     .hamburger-is-open .line-2{ opacity: 0; }
-    .hamburger-is-open .line-3{ transform: translate(0, -12px) rotate(-45deg); }
+    .hamburger-is-open .line-3{ transform: translate(0, -5px) rotate(-45deg); }
 
-    .mobile-nav-links {
+    .mobile-nav-links, .mobile-dropdown {
         display: none;
         flex-direction: column;
         position: fixed;
-        background-color: white;
-        top: 220px;
+        background-color: #F8F8F8;
+        top: 150px;
         text-transform: capitalize;
         width: 100%;
         height: max-content;
         z-index: 9999;
     }
 
-    .mobile-nav-links-is-open{ display: flex; }
+    .mobile-nav-links-is-open{
+        display: flex;
+    }
 
-    .mobile-nav-link>a{
-        color: black;
-        padding: 50px;
-        font-size: larger;
+    .mobile-nav-links:first-child, .mobile-dropdown>a{
+        border-top: unset;
+    }
+
+    .mobile-nav-link, .mobile-dropdown>a{
+        border-top: 1px solid #ddd;
+        padding: 1em 5%;
         transition: 0.3s;
+    }
+
+    .mobile-nav-link>a, .mobile-dropdown>a{
+        color: #000000;
+        display: block;
+        float: left;
+        font-size: 14px;
+        margin: 0;
+        text-align: left;
+        text-decoration: none;
+        text-transform: capitalize;
+        width: 90%;
+    }
+
+    .mobile-nav-link .mobile-sub-opener{
+        float: right;
+        color:black;
     }
 
     nav>button{ display: none; }
