--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ Version: 1.0
 }
 
 body{
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Nunito', sans-serif;
 }
 
 button {
